--- a/testcss2.css
+++ b/testcss2.css
@@ -1,7 +1,4 @@
-@font-face {
-    font-family: 'Source Sans Pro', sans-serif;
-    src: url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap')
-}
+    @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 .AFrame {
     user-select: none;
